Update 02. Supervised Learning for Neural Network Quiz.md

--- a/Week 1 Introduction to Deep Learning/02. Supervised Learning for Neural Network Quiz.md
+++ b/Week 1 Introduction to Deep Learning/02. Supervised Learning for Neural Network Quiz.md
@@ -5,4 +5,6 @@ Question
 --------  
 
 Would structured or unstructured data have features such as pixel values or individual words?  
+A. Structured data  
+B. Unstructured data  
 Answer: `Unstructured data`  
