Update 03. Why is Deep Learning Taking Off Quiz.md

--- a/Week 1 Introduction to Deep Learning/03. Why is Deep Learning Taking Off Quiz.md
+++ b/Week 1 Introduction to Deep Learning/03. Why is Deep Learning Taking Off Quiz.md
@@ -1,12 +1,12 @@
-Quiz
-====  
+# Quiz
 
 Question
---------  
+
+---
 
 What will the variable m denote in this course?  
 A. Number of hidden layers  
 B. Number of training examples  
 C. The expected output  
 D. Slope  
-Answer: Number of training examples  
+Answer: Number of training examples
