--- a/Week 1 Introduction to Deep Learning/02. Supervised Learning for Neural Network Quiz.md
+++ b/Week 1 Introduction to Deep Learning/02. Supervised Learning for Neural Network Quiz.md
@@ -1,10 +1,10 @@
-Quiz
-====  
+# Quiz
 
 Question
---------  
+
+---
 
 Would structured or unstructured data have features such as pixel values or individual words?  
 A. Structured data  
 B. Unstructured data  
-Answer: `Unstructured data`  
+Answer: `Unstructured data`
