Update 01. What is Neural Network Quiz.md

--- a/Week 1 Introduction to Deep Learning/01. What is Neural Network Quiz.md
+++ b/Week 1 Introduction to Deep Learning/01. What is Neural Network Quiz.md
@@ -1,8 +1,8 @@
-Quiz
-====  
+# Quiz
 
 Question
---------  
+
+---
 
 True or false? As explained in this lecture, every input layer feature is interconnected with every hidden layer feature.  
-Answer: `True`  
+Answer: `True`
